--- a/package.json
+++ b/package.json
@@ -1,32 +1,71 @@
 {
   "name": "social-f",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+  "version": "0.0.1",
+  "packageManager": "yarn@3.2.1",
+  "engines": {
+    "node": "16"
   },
   "scripts": {
+    "clean": "rimraf build",
+    "lint": "eslint --max-warnings 0 .",
+    "lint-fix": "eslint --max-warnings 0 --fix .",
+    "format": "prettier --write 'src/**/*.{ts,tsx,css,json}' --config ./.prettierrc.yml",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "ci": "yarn clean && yarn lint && yarn build",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@date-io/moment": "1.3.13",
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
+    "@material-ui/core": "4.12.2",
+    "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "4.0.0-alpha.61",
+    "@material-ui/pickers": "3.3.10",
+    "@tanstack/react-query": "4.0.10",
+    "axios": "0.27.2",
+    "chart.js": "3.8.0",
+    "firebase": "^9.19.1",
+    "moment": "2.29.4",
+    "prop-types": "15.8.1",
+    "react": "17.0.2",
+    "react-beautiful-dnd": "13.1.0",
+    "react-chartjs-2": "4.2.0",
+    "react-dom": "17.0.2",
+    "react-hook-form": "7.33.1",
+    "react-is": "17.0.2",
+    "react-router-dom": "6.3.0"
+  },
+  "devDependencies": {
+    "@tanstack/react-query-devtools": "4.0.10",
+    "@types/react": "17.0.48",
+    "@types/react-beautiful-dnd": "13.1.2",
+    "@types/react-dom": "17.0.17",
+    "@typescript-eslint/eslint-plugin": "5.30.0",
+    "@typescript-eslint/parser": "5.30.0",
+    "eslint": "8.22.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-config-react-app": "7.0.1",
+    "eslint-import-resolver-typescript": "3.1.1",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.0",
+    "eslint-plugin-prettier": "4.1.0",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "pinst": "3.0.0",
+    "prettier": "2.7.1",
+    "react-scripts": "5.0.1",
+    "rimraf": "3.0.2",
+    "ts-node": "10.8.1",
+    "typescript": "4.7.3"
+  },
+  "resolutions": {
+    "@types/react": "17.0.48",
+    "@types/react-dom": "17.0.17"
   },
   "browserslist": {
     "production": [
