--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,26 @@
-# https://next.yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
-.yarn/*
-# !.yarn/cache
-!.yarn/patches
-# !.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# backup
-node_modules/
-build/
-old_commit.txt
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# npm
-package-lock.json
+# testing
+/coverage
 
-# yalc
-.yalc/
-yalc.lock
+# production
+/build
 
-# visual studio code settings
-.vscode/*
-!.vscode/*.code-snippets
-!.vscode/settings.json
-
-#prettier settings
-.prettierrc.json
-
-# macOS
+# misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
-# Build output
-dist/
-dist-types/
-*.tsbuildinfo
+
+.yarn 
