--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@date-io/moment": "^2.16.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@material-ui/pickers": "^3.3.10",
+    "@mui/base": "^5.0.0-alpha.127",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
+    "@mui/system": "^5.12.1",
+    "@mui/x-date-pickers": "^6.2.1",
     "@tanstack/react-query": "^4.29.1",
     "@tanstack/react-query-devtools": "^4.29.1",
     "@types/node": "^16.7.13",
@@ -30,6 +32,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "firebase": "^9.19.1",
+    "moment": "^2.29.4",
     "pinst": "^3.0.0",
     "prettier": "^2.8.7",
     "prop-types": "^15.8.1",
