--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,5 @@
   },
   "editor.formatOnSave": true,
   "eslint.nodePath": ".yarn/sdks",
-  "prettier.prettierPath": ".yarn/sdks/prettier/index.js",
-  "typescript.tsdk": ".yarn/sdks/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true
+  "prettier.prettierPath": ".yarn/sdks/prettier/index.js"
 }
