--- a/.github/workflows/publish-to-pages.yml
+++ b/.github/workflows/publish-to-pages.yml
@@ -25,16 +25,17 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Set up Node.js 🍉
-        uses: actions/setup-node@v3
+      - name: Run install
+        uses: borales/actions-yarn@v4
         with:
-          node-version: '16.20'
+          cmd: install # will run `yarn install` command
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.PAGES_DEPLOYMENT }} # if needed
 
-      - name: Install dependencies 🥑
-        run: yarn install
-
-      - name: Build React App 🚀
-        run: yarn build
+      - name: Build production bundle
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: build
 
       - name: Upload Build Artifact ⛱️
         uses: actions/upload-artifact@v2
@@ -47,7 +48,7 @@ jobs:
     needs: build
 
     steps:
-      - name: Deploy to GitHub Pages 🚀
+      - name: Deploy to GitHub Pages 🚀s
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.PAGES_DEPLOYMENT }}
