--- a/.github/workflows/publish-to-pages.yml
+++ b/.github/workflows/publish-to-pages.yml
@@ -25,15 +25,33 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2.1.5
-        with:
-          node-version: "16.20"
+      - name: Detect package manager 👻
+        id: detect-package-manager
+        run: |
+          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
+            echo "::set-output name=manager::yarn"
+            echo "::set-output name=command::install"
+            echo "::set-output name=runner::yarn"
+            exit 0
+          elif [ -f "${{ github.workspace }}/package.json" ]; then
+            echo "::set-output name=manager::npm"
+            echo "::set-output name=command::ci"
+            echo "::set-output name=runner::npx --no-install"
+            exit 0
+          else
+            echo "Unable to determine packager manager"
+            exit 1
+          fi
 
-      - name: Run install
-        uses: borales/actions-yarn@v4
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3
         with:
-          cmd: install # will run `yarn install` command
+          cache: ${{ steps.detect-package-manager.outputs.manager }}
+          node-version: '16.10.0'
+
+      - name: Install dependencies 🥑
+        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
 
       - name: Build production bundle
         uses: borales/actions-yarn@v4
