--- a/.github/workflows/publish-to-pages.yml
+++ b/.github/workflows/publish-to-pages.yml
@@ -55,6 +55,8 @@ jobs:
 
       - name: Build 🍄
         run: ${{ steps.detect-package-manager.outputs.runner }} build
+        env:
+          CI: false
 
   deploy:
     runs-on: ubuntu-latest
