--- a/.github/workflows/publish-to-pages.yml
+++ b/.github/workflows/publish-to-pages.yml
@@ -57,22 +57,18 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.runner }} build
         env:
           CI: false
+      - name: Upload artifact ⛱️
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./build
 
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-
     needs: build
-
     steps:
-      - name: Deploy to GitHub Pages 🚀s
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.PAGES_DEPLOYMENT }}
-          publish_dir: ./build
-      - name: Checkout 🛎️
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js 🍉
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16.20'
+      - name: Deploy to GitHub Pages 🚀
+        id: deployment
+        uses: actions/deploy-pages@v1
