--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.11.16",
     "@mui/system": "^5.12.1",
     "@mui/x-date-pickers": "^6.2.1",
+    "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^4.29.1",
     "@tanstack/react-query-devtools": "^4.29.1",
     "@types/node": "^16.7.13",
@@ -32,6 +33,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "firebase": "^9.19.1",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "pinst": "^3.0.0",
     "prettier": "^2.8.7",
